Support multimodal stop places on import.