@@ -16,8 +16,14 @@
 package org.rutebanken.tiamat.importer.initial;
 
 import org.rutebanken.tiamat.importer.StopPlaceTopographicPlaceReferenceUpdater;
+import org.rutebanken.tiamat.importer.finder.SomethingWrapper;
+import org.rutebanken.tiamat.importer.finder.StopPlaceBySomethingFinder;
+import org.rutebanken.tiamat.importer.handler.StopPlaceGrouper;
+import org.rutebanken.tiamat.importer.handler.StopPlaceType;
+import org.rutebanken.tiamat.model.SiteRefStructure;
 import org.rutebanken.tiamat.model.StopPlace;
 import org.rutebanken.tiamat.netex.mapping.NetexMapper;
+import org.rutebanken.tiamat.versioning.VersionCreator;
 import org.rutebanken.tiamat.versioning.save.StopPlaceVersionedSaverService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -26,10 +32,12 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
 
-import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.groupingBy;
 
 @Component
 @Transactional
@@ -46,29 +54,112 @@ public class ParallelInitialStopPlaceImporter {
     @Autowired
     private NetexMapper netexMapper;
 
+    @Autowired
+    private StopPlaceBySomethingFinder finder;
+
     @Value("${changelog.publish.enabled:false}")
     private boolean publishChangelog;
 
-    public List<org.rutebanken.netex.model.StopPlace> importStopPlaces(List<StopPlace> tiamatStops, AtomicInteger stopPlacesCreated) {
+    @Autowired
+    private VersionCreator versionCreator;
 
-        if (publishChangelog){
+    public List<org.rutebanken.netex.model.StopPlace> importStopPlaces(List<StopPlace> tiamatStops, AtomicInteger stopPlacesCreated) {
+        if (publishChangelog) {
             throw new IllegalStateException("Initial import not allowed with changelog publishing enabled! Set changelog.publish.enabled=false");
         }
 
-        return tiamatStops.parallelStream()
-                .map(stopPlace -> {
+        StopPlaceGrouper groupByStopPlaceHierarchy = groupByHierarchy(tiamatStops);
 
-                    if(stopPlace.getTariffZones() != null) {
-                        stopPlace.getTariffZones().forEach(tariffZoneRef -> tariffZoneRef.setVersion(null));
+        List<org.rutebanken.netex.model.StopPlace> parents = groupByStopPlaceHierarchy.parents().parallelStream()
+                .peek(stopPlaceTopographicPlaceReferenceUpdater::updateTopographicReference)
+                .map(stopPlace -> {
+                    String externalId = stopPlace.getNetexId();
+                    stopPlace.setParentStopPlace(true);
+                    StopPlace saved = stopPlaceVersionedSaverService.saveNewVersion(stopPlace);
+                    stopPlacesCreated.incrementAndGet();
+
+                    String importedId = saved.getKeyValues().get("imported-id").getItems().stream().findFirst().orElse(null);
+
+                    if (externalId == null) {
+                        stopPlace.getOriginalIds().forEach(originalId -> finder.updateCache(originalId, new SomethingWrapper(saved.getNetexId(), originalId)));
+                    } else {
+                        finder.updateCache(stopPlace.getNetexId(), new SomethingWrapper(saved.getNetexId(), importedId));
                     }
 
-                    return stopPlace;
+                    return netexMapper.mapToNetexModel(saved);
                 })
-                .peek(stopPlace -> stopPlaceTopographicPlaceReferenceUpdater.updateTopographicReference(stopPlace))
-                .map(stopPlace -> stopPlaceVersionedSaverService.saveNewVersion(stopPlace))
-                .peek(stopPlace -> stopPlacesCreated.incrementAndGet())
-                .map(stopPlace -> netexMapper.mapToNetexModel(stopPlace))
-                .collect(toList());
+                .toList();
+
+        List<org.rutebanken.netex.model.StopPlace> stops = new ArrayList<>(parents);
+
+        List<org.rutebanken.netex.model.StopPlace> children = groupByStopPlaceHierarchy.children().parallelStream()
+                .peek(stopPlaceTopographicPlaceReferenceUpdater::updateTopographicReference)
+                .map(stopPlace -> {
+                    StopPlace parentStopPlace = null;
+                    if (stopPlace.getParentSiteRef() != null && stopPlace.getParentSiteRef().getRef() != null) {
+                        String importedParentId = stopPlace.getParentSiteRef().getRef();
+                        parentStopPlace = finder.findByExternalId(importedParentId);
+                        String resolvedParentNetexId = parentStopPlace.getNetexId();
+
+                        if (resolvedParentNetexId != null) {
+                            SiteRefStructure parentSiteRef = new SiteRefStructure();
+                            parentSiteRef.setRef(resolvedParentNetexId);
+                            parentSiteRef.setVersion(stopPlace.getParentSiteRef().getVersion());
+                            stopPlace.setParentSiteRef(parentSiteRef);
+                        } else {
+                            logger.warn("Could not resolve parent {} for child {}. Keeping original reference.",
+                                    importedParentId, stopPlace.getId());
+                        }
+                    }
+
+                    StopPlace saved = stopPlaceVersionedSaverService.saveNewVersion(stopPlace);
+
+                    StopPlace updatedStopPlace = null;
+                    if (parentStopPlace != null) {
+                        updatedStopPlace = versionCreator.createCopy(parentStopPlace, StopPlace.class);
+                        updatedStopPlace.getChildren().add(saved);
+                        stopPlaceVersionedSaverService.saveNewVersion(parentStopPlace, updatedStopPlace);
+                    }
+                    stopPlacesCreated.incrementAndGet();
+                    return netexMapper.mapToNetexModel(saved);
+                })
+                .toList();
+
+        stops.addAll(children);
+        return stops;
+    }
+
+    private StopPlaceGrouper groupByHierarchy(List<StopPlace> stops) {
+        Map<StopPlaceType, List<StopPlace>> grouped = stops.stream().collect(groupingBy(this::determineStopPlaceType));
+
+        return new StopPlaceGrouper(
+                grouped.getOrDefault(StopPlaceType.PARENT, List.of()),
+                grouped.getOrDefault(StopPlaceType.CHILD, List.of()),
+                grouped.getOrDefault(StopPlaceType.MONOMODAL, List.of())
+        );
+    }
+
+    private StopPlaceType determineStopPlaceType(StopPlace stopPlace) {
+        boolean hasQuays = stopPlace.getQuays() != null && !stopPlace.getQuays().isEmpty();
+
+        boolean hasParentRef = stopPlace.getParentSiteRef() != null
+                && stopPlace.getParentSiteRef().getRef() != null
+                && !stopPlace.getParentSiteRef().getRef().isBlank();
+
+        boolean isExplicitParent = stopPlace.isParentStopPlace();
+
+        if (isExplicitParent || (!hasQuays && !hasParentRef)) {
+            return StopPlaceType.PARENT;
+        }
+        if (hasQuays && hasParentRef) {
+            return StopPlaceType.CHILD;
+        }
+        if (hasQuays) {
+            return StopPlaceType.MONOMODAL;
+        }
+
+        logger.info("StopPlace {} could not be classified (quays={}, parentRef={})", stopPlace.getId(), hasQuays, hasParentRef);
+        return StopPlaceType.UNKNOWN;
     }
 
 }
